<resources>
    <string name="app_name">KaraBourse</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="categoty">دسته بندی ها</string>
    <string name="orders">سفارشات</string>
    <string name="search">جستجو</string>
    <string name="profile">پیشخوان</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="whate_you_searching_for">به دنبال چه محصولی میگردید</string>
    <string name="learning_course">دوره های آموزشی</string>
    <string name="accessoires">ابزار</string>
    <string name="free_products">محصولات رایگان</string>
    <string name="librally">کتابخانه</string>
    <string name="phone_number">شماره تلفن</string>
    <string name="input_email">ایمیل</string>
    <string name="saft_code">کد امنیتی</string>
    <string name="national_Cod">کد ملی</string>
    <string name="name">نام</string>
    <string name="password">رمز عبور</string>
    <string name="repeat_pass">تکرار رمز عبور</string>
    <string name="family_name">نام خانوادگی</string>
</resources>