<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="صفحه اصلی" />

    <item
        android:id="@+id/navigation_my_profile"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/profile" />

    <item
        android:id="@+id/navigation_categury"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/categoty" />
    <item
        android:id="@+id/navigation_orders"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/orders" />
    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/search" />



</menu>