<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#ececec"
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/include3"
        layout="@layout/layout_toolbar_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/national_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="72dp"
        android:background="@drawable/ed_input_back"
        android:hint="@string/national_Cod"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="4:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include3"
        app:layout_constraintVertical_bias="0.053" />

    <EditText
        android:id="@+id/name_register_sejam"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/ed_input_back"
        android:hint="@string/name"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="4:1"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/national_id"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/family_register_sejam"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/ed_input_back"
        android:hint="@string/family_name"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="4:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_register_sejam"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/pass_sejam"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/ed_input_back"
        android:hint="@string/password"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="4:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/family_register_sejam"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/re_se_phone_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/ed_input_back"
        android:hint="@string/repeat_pass"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="4:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pass_sejam"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:layout_width="253dp"
        android:layout_height="35dp"
        android:background="@drawable/ed_input_back"
        android:weightSum="4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="4:1"
        app:layout_constraintEnd_toEndOf="@+id/re_se_phone_number"
        app:layout_constraintStart_toStartOf="@+id/re_se_phone_number">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2">

            <Spinner
                android:id="@+id/sp_year"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/black"
                android:gravity="center_vertical"
                tools:layout_editor_absoluteX="1dp"
                tools:layout_editor_absoluteY="512dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Spinner
                android:id="@+id/sp_month"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/black"
                android:gravity="center"
                tools:layout_editor_absoluteX="1dp"
                tools:layout_editor_absoluteY="512dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Spinner
                android:id="@+id/sp_day"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/black"
                android:gravity="center"
                tools:layout_editor_absoluteX="1dp"
                tools:layout_editor_absoluteY="512dp" />
        </LinearLayout>


    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>